--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,15 @@ steps:
     provider: 'aws'
     command: 'plan'
     environmentServiceNameAWS: 'finaldevopstestsc'
+    backendServiceAWS: 'finaldevopstestsc'
+    backendAWSBucketName: 'devopstfstate'
+    backendAWSKey: 'terraform.tfstate'
 
 - task: TerraformTaskV4@4
   inputs:
     provider: 'aws'
     command: 'apply'
     environmentServiceNameAWS: 'finaldevopstestsc'
+    backendServiceAWS: 'finaldevopstestsc'
+    backendAWSBucketName: 'devopstfstate'
+    backendAWSKey: 'terraform.tfstate'
