--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,10 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  username: $(username)
+  password: $(password)
+
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
@@ -27,3 +31,6 @@ steps:
     provider: 'aws'
     command: 'apply'
     environmentServiceNameAWS: 'finaldevopstestsc'
+    variableSet: |        
+        username=$(username)
+        password=$(password) 
